--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -235,7 +235,7 @@ msgstr ""
 "uhlinzeke Ngempendulo Yokuqinisekisa ye-SAML. Sicela uphawule ukuthi "
 "isiphetho asihloselwe ukufinyelelwa ngokuqondile."
 
-msgid "{login:contact_info}"
+msgid "Contact information:"
 msgstr "Ulwazi lokuxhumana:"
 
 msgid "Error report sent"
