--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -295,7 +295,7 @@ msgstr "Uphume ngempumelelo kuwo wonke amasevisi abhalwe ngenhla."
 msgid "Incorrect username or password."
 msgstr "Igama lomsebenzisi noma iphasiwedi engalungile."
 
-msgid "{login:error_header}"
+msgid "Error"
 msgstr "Iphutha"
 
 msgid "You have been logged out."
