Remove obsolete msgid "{errors:descr_RESPONSESTATUSNOSUCCESS}"

--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -309,7 +309,9 @@ msgstr ""
 "Ukuqinisekisa kuhlulekile: isitifiketi esithunyelwe isiphequluli sakho "
 "asaziwa"
 
-msgid "{errors:descr_RESPONSESTATUSNOSUCCESS}"
+msgid ""
+"The Identity Provider responded with an error. (The status code in the "
+"SAML Response was not success)"
 msgstr ""
 "Umhlinzeki Womazisi uphendule ngephutha. (Ikhodi yesimo Sempendulo ye-"
 "SAML ayizange iphumelele)"
