--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -304,7 +304,9 @@ msgstr "Ayikwazanga ukuyila impendulo yongqinisiso"
 msgid "Authentication failed: the certificate your browser sent is unknown"
 msgstr "Ungqinisiso lusilele: isatifikerthi esithunyelwe yibhrawuza yakho asaziwa"
 
-msgid "{errors:descr_RESPONSESTATUSNOSUCCESS}"
+msgid ""
+"The Identity Provider responded with an error. (The status code in the "
+"SAML Response was not success)"
 msgstr ""
 "Umboneleli Wesazisi uphendule ngempazamo. (Ikhowudi yobume kwiMpendulo "
 "ye-SAML ayiphumelelanga)"
