Remove obsolete msgid "{errors:descr_LDAPERROR}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -270,7 +270,9 @@ msgstr "Iphuma kwezi nkonzo zilandelayo:"
 msgid "CAS Error"
 msgstr "Impazamo ye-CAS"
 
-msgid "{errors:descr_LDAPERROR}"
+msgid ""
+"LDAP is the user database, and when you try to login, we need to contact "
+"an LDAP database. An error occurred when we tried it this time."
 msgstr ""
 "I-LDAP ngumvimba wengcombolo yomsebenzisi, yaye xa uzame ukungena, "
 "kufuneka siqhagamshele uvimba wengcombolo we-LDAP. Kwenzeke impazamo xa "
