--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -273,7 +273,9 @@ msgstr "Iyaphuma kumasevisi alandelayo:"
 msgid "CAS Error"
 msgstr "Iphutha Le-CAS"
 
-msgid "{errors:descr_LDAPERROR}"
+msgid ""
+"LDAP is the user database, and when you try to login, we need to contact "
+"an LDAP database. An error occurred when we tried it this time."
 msgstr ""
 "I-LDAP iyidathabheyisi yomsebenzisi, futhi lapho uzama ukungena, sidinga "
 "ukuthinta idathabheyisi ye-LDAP. Kuvele iphutha ngesikhathi siyizama "
