Remove obsolete msgid "{errors:descr_METADATA}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -27,7 +27,10 @@ msgstr ""
 "Xa lo mboneleli wesazisi ezama ukuyila impendulo yongqinisiso, kwenzeke "
 "impazamo."
 
-msgid "{errors:descr_METADATA}"
+msgid ""
+"There is some misconfiguration of your SimpleSAMLphp installation. If you"
+" are the administrator of this service, you should make sure your "
+"metadata configuration is correctly setup."
 msgstr ""
 "Kukho ulungiselelo olungachanekanga oluthile lofakelo lwakho lwe-"
 "SimpleSAMLphp. Ukuba ngaba ungumlawuli wale nkonzo, ufanele uqinisekise "
