--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -27,7 +27,10 @@ msgstr ""
 "Ngenkathi lo mhlinzeki kamazisi ezama ukwakha impendulo yokuqinisekisa, "
 "kuvele iphutha."
 
-msgid "{errors:descr_METADATA}"
+msgid ""
+"There is some misconfiguration of your SimpleSAMLphp installation. If you"
+" are the administrator of this service, you should make sure your "
+"metadata configuration is correctly setup."
 msgstr ""
 "Kukhona umiso olungafanele kukufaka kwakho kwe-SimpleSAMLphp. Uma "
 "ungumlawuli wale sevisi, kufanele wenze isiqiniseko sokuthi umiso lwakho "
