Remove obsolete msgid "{errors:descr_PROCESSAUTHNREQUEST}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -244,7 +244,9 @@ msgstr "Ingxelo yempazamo ithunyelwe"
 msgid "Authentication aborted"
 msgstr "Ungqinisiso luyekiwe"
 
-msgid "{errors:descr_PROCESSAUTHNREQUEST}"
+msgid ""
+"This Identity Provider received an Authentication Request from a Service "
+"Provider, but an error occurred when trying to process the request."
 msgstr ""
 "Lo Mboneleli Wesazisi ufumene Isicelo Songqinisiso esisuka kuMboneleli "
 "Wenkonzo, kodwa kwenzeke impazamo xa kuzanywa ukuprosesa isicelo."
