--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -247,7 +247,9 @@ msgstr "Umbiko wephutha uthunyelwe"
 msgid "Authentication aborted"
 msgstr "Ukuqinisekisa kuyekisiwe"
 
-msgid "{errors:descr_PROCESSAUTHNREQUEST}"
+msgid ""
+"This Identity Provider received an Authentication Request from a Service "
+"Provider, but an error occurred when trying to process the request."
 msgstr ""
 "Lo Mhlinzeki Kamazisi uthole Isicelo Sokuqinisekisa ukusuka Kumhlinzeki "
 "Wesevisi, kodw,a kuvele iphutha ngenkathi ezama ukucubungula isicelo."
