Remove obsolete msgid "{login:error_nopassword}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -46,7 +46,9 @@ msgstr "Akukho sicelo se-SAML sinikelweyo"
 msgid "Error when communicating with the CAS server."
 msgstr "Impazamo xa kunxibelelwana neseva ye-CAS."
 
-msgid "{login:error_nopassword}"
+msgid ""
+"You sent something to the login page, but for some reason the password "
+"was not sent. Try again please."
 msgstr ""
 "Uthumele into kwikhasi lokungena, kodwa ngesizathu esithile iphaswedi "
 "ayithunyelwanga. Nceda uzame kwakhona."
