--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -47,7 +47,9 @@ msgstr "Asikho isicelo se-SAML esinikeziwe"
 msgid "Error when communicating with the CAS server."
 msgstr "Iphutha ngenkathi kuxhunyanwa neseva ye-CAS."
 
-msgid "{login:error_nopassword}"
+msgid ""
+"You sent something to the login page, but for some reason the password "
+"was not sent. Try again please."
 msgstr ""
 "Uthumele okuthile ekhasini lokungena, kodwa ngasizathu simbe iphasiwedi "
 "ayizange ithunyelwe. Sicela uzame futhi."
