Remove obsolete msgid "{errors:debuginfo_text}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -285,7 +285,9 @@ msgstr ""
 "kufuneka siqhagamshele uvimba wengcombolo we-LDAP. Kwenzeke impazamo xa "
 "besiyizama."
 
-msgid "{errors:debuginfo_text}"
+msgid ""
+"The debug information below may be of interest to the administrator / "
+"help desk:"
 msgstr ""
 "Inkcazelo yokulungisa engezantsi isenokuba ibangela umdla kumlawuli / "
 "idesika yoncedo:"
