--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -288,7 +288,9 @@ msgstr ""
 "ukuthinta idathabheyisi ye-LDAP. Kuvele iphutha ngesikhathi siyizama "
 "ngalesi sikhathi."
 
-msgid "{errors:debuginfo_text}"
+msgid ""
+"The debug information below may be of interest to the administrator / "
+"help desk:"
 msgstr ""
 "Ulwazi lokususwa kwephutha olungezansi lungase lukhange kumlawuli / "
 "ideski losizo:"
