Remove obsolete msgid "{logout:incapablesps}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -370,7 +370,10 @@ msgstr ""
 msgid "Send error report"
 msgstr "Thumela ingxelo yempazamo"
 
-msgid "{logout:incapablesps}"
+msgid ""
+"One or more of the services you are logged into <i>do not support "
+"logout</i>. To ensure that all your sessions are closed, you are "
+"encouraged to <i>close your webbrowser</i>."
 msgstr ""
 "Inkonzo enye okanye ezingakumbi ongeneyo kuzo <i>azikuxhasi ukuphuma</i>."
 " Ukuqinisekisa zonke iiseshoni zakho zivaliwe, ukhuthazwa <i>uvale "
