--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -375,7 +375,10 @@ msgstr ""
 msgid "Send error report"
 msgstr "Thumela umbiko wephutha"
 
-msgid "{logout:incapablesps}"
+msgid ""
+"One or more of the services you are logged into <i>do not support "
+"logout</i>. To ensure that all your sessions are closed, you are "
+"encouraged to <i>close your webbrowser</i>."
 msgstr ""
 "Isevisi eyodwa noma ngaphezulu ongene kuyo <i>ayikusekeli ukuphuma</i>. "
 "Ukuze wenze isiqiniseko sokuthi wonke amaseshini akho avaliwe, ukhuthazwa"
