Remove obsolete msgid "{errors:descr_NOTSET}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -343,7 +343,9 @@ msgstr ""
 msgid "Choose home organization"
 msgstr "Khetha umbutho wekhaya"
 
-msgid "{errors:descr_NOTSET}"
+msgid ""
+"The password in the configuration (auth.adminpassword) is not changed "
+"from the default value. Please edit the configuration file."
 msgstr ""
 "Iphaswedi ekulungiselelo (auth.adminpassword) ayitshintshwanga ukusuka "
 "kwixabiso lesiseko. Nceda uhlele ifayile yolungiselelo."
