--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -348,7 +348,9 @@ msgstr ""
 msgid "Choose home organization"
 msgstr "Khetha inhlangano yasekhaya"
 
-msgid "{errors:descr_NOTSET}"
+msgid ""
+"The password in the configuration (auth.adminpassword) is not changed "
+"from the default value. Please edit the configuration file."
 msgstr ""
 "Iphasiwedi kumiso (auth.adminpassword) ayishintshiwe kunani "
 "elizenzakalelayo. Sicela uhlele ifayela lomiso."
