Remove obsolete msgid "{errors:descr_SLOSERVICEPARAMS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -396,7 +396,10 @@ msgstr "Isinxaxhi esingasingathwanga silahliwe."
 msgid "Error creating request"
 msgstr "Impazamo nokuyila isicelo"
 
-msgid "{errors:descr_SLOSERVICEPARAMS}"
+msgid ""
+"You accessed the SingleLogoutService interface, but did not provide a "
+"SAML LogoutRequest or LogoutResponse. Please note that this endpoint is "
+"not intended to be accessed directly."
 msgstr ""
 "Ufikelele i-intafeyisi ye-SingleLogoutService, kodwa awukhange unikele "
 "i-SAML LogoutRequest okanye i-LogoutResponse. Nceda uqaphele ukuba le "
