--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -401,7 +401,10 @@ msgstr "Okuhlukile okungasingathiwe kulahliwe."
 msgid "Error creating request"
 msgstr "Iphutha lokwakha isicelo"
 
-msgid "{errors:descr_SLOSERVICEPARAMS}"
+msgid ""
+"You accessed the SingleLogoutService interface, but did not provide a "
+"SAML LogoutRequest or LogoutResponse. Please note that this endpoint is "
+"not intended to be accessed directly."
 msgstr ""
 "Ufinyelele ukusebenzisana kwe-SingleLogoutService, kodwa awuzange "
 "uhlinzeke nge-SAML LogoutRequest noma i-LogoutResponse. Sicela uphawule "
