Fix stray {multiauth:multiauth:select_source_text} tag

--- a/modules/multiauth/locales/st/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/st/LC_MESSAGES/multiauth.po
@@ -14,7 +14,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-msgid "{multiauth:multiauth:select_source_text}"
+msgid ""
+"The selected authentication source will be used to authenticate you and "
+"to create a valid session."
 msgstr ""
 "Mohlodi wa netefatso o kgethilweng o tla sebediswa ho netefatsa wena le "
 "ho theha seshene e nepahetseng."
