--- a/modules/core/locales/en/LC_MESSAGES/core.po
+++ b/modules/core/locales/en/LC_MESSAGES/core.po
@@ -17,14 +17,18 @@ msgstr ""
 msgid "Go back to the previous page and try again."
 msgstr "Go back to the previous page and try again."
 
-msgid "If this problem persists, you can report it to the system administrators."
-msgstr "If this problem persists, you can report it to the system administrators."
+msgid ""
+"If this problem persists, you can report it to the system administrators."
+msgstr ""
+"If this problem persists, you can report it to the system administrators."
 
 msgid "Welcome"
 msgstr "Welcome"
 
-msgid "Hosted Shibboleth 1.3 Service Provider Metadata (automatically generated)"
-msgstr "Hosted Shibboleth 1.3 Service Provider Metadata (automatically generated)"
+msgid ""
+"Hosted Shibboleth 1.3 Service Provider Metadata (automatically generated)"
+msgstr ""
+"Hosted Shibboleth 1.3 Service Provider Metadata (automatically generated)"
 
 msgid "Retry login"
 msgstr "Retry login"
@@ -33,24 +37,27 @@ msgid "Close the web browser, and try again."
 msgstr "Close the web browser, and try again."
 
 msgid "We were unable to locate the state information for the current request."
-msgstr "We were unable to locate the state information for the current request."
+msgstr ""
+"We were unable to locate the state information for the current request."
 
 msgid ""
-"This is most likely a configuration problem on either the service "
-"provider or identity provider."
+"This is most likely a configuration problem on either the service provider "
+"or identity provider."
 msgstr ""
-"This is most likely a configuration problem on either the service "
-"provider or identity provider."
+"This is most likely a configuration problem on either the service provider "
+"or identity provider."
 
 msgid "Using the back and forward buttons in the web browser."
 msgstr "Using the back and forward buttons in the web browser."
 
 msgid ""
-"You are running an outdated version of SimpleSAMLphp. Please update to <a"
-" href=\"https://simplesamlphp.org/download\">the latest version</a> as soon as possible."
+"You are running an outdated version of SimpleSAMLphp. Please update to <a "
+"href=\"https://simplesamlphp.org/download\">the latest version</a> as soon "
+"as possible."
 msgstr ""
-"You are running an outdated version of SimpleSAMLphp. Please update to <a"
-" href=\"https://simplesamlphp.org/download\">the latest version</a> as soon as possible."
+"You are running an outdated version of SimpleSAMLphp. Please update to <a "
+"href=\"https://simplesamlphp.org/download\">the latest version</a> as soon "
+"as possible."
 
 msgid "Missing cookie"
 msgstr "Missing cookie"
@@ -75,11 +82,11 @@ msgid "Retry"
 msgstr "Retry"
 
 msgid ""
-"If you are an user who received this error after following a link on a "
-"site, you should report this error to the owner of that site."
+"If you are an user who received this error after following a link on a site, "
+"you should report this error to the owner of that site."
 msgstr ""
-"If you are an user who received this error after following a link on a "
-"site, you should report this error to the owner of that site."
+"If you are an user who received this error after following a link on a site, "
+"you should report this error to the owner of that site."
 
 msgid "Suggestions for resolving this problem:"
 msgstr "Suggestions for resolving this problem:"
@@ -92,28 +99,147 @@ msgstr "State information lost"
 
 msgid ""
 "We have detected that there is only a few seconds since you last "
-"authenticated with this service provider, and therefore assume that there"
-" is a problem with this SP."
+"authenticated with this service provider, and therefore assume that there is "
+"a problem with this SP."
 msgstr ""
 "We have detected that there is only a few seconds since you last "
-"authenticated with this service provider, and therefore assume that there"
-" is a problem with this SP."
+"authenticated with this service provider, and therefore assume that there is "
+"a problem with this SP."
 
 msgid ""
-"If you are a developer who is deploying a single sign-on solution, you "
-"have a problem with the metadata configuration. Verify that metadata is "
+"If you are a developer who is deploying a single sign-on solution, you have "
+"a problem with the metadata configuration. Verify that metadata is "
 "configured correctly on both the identity provider and service provider."
 msgstr ""
-"If you are a developer who is deploying a single sign-on solution, you "
-"have a problem with the metadata configuration. Verify that metadata is "
+"If you are a developer who is deploying a single sign-on solution, you have "
+"a problem with the metadata configuration. Verify that metadata is "
 "configured correctly on both the identity provider and service provider."
 
 msgid "Too short interval between single sign on events."
 msgstr "Too short interval between single sign on events."
 
-msgid "Hosted Shibboleth 1.3 Identity Provider Metadata (automatically generated)"
-msgstr "Hosted Shibboleth 1.3 Identity Provider Metadata (automatically generated)"
+msgid ""
+"Hosted Shibboleth 1.3 Identity Provider Metadata (automatically generated)"
+msgstr ""
+"Hosted Shibboleth 1.3 Identity Provider Metadata (automatically generated)"
 
 msgid "Report this error"
 msgstr "Report this error"
 
+msgid "Incorrect Attributes"
+msgstr ""
+
+msgid ""
+"One or more of the attributes supplied by your identity provider did not "
+"contain the expected number of values."
+msgstr ""
+
+msgid "The problematic attribute(s) are:"
+msgstr ""
+
+msgid "got %got% values, want %want%"
+msgstr ""
+
+msgid "Logout"
+msgstr ""
+
+msgid "Error report sent"
+msgstr ""
+
+msgid "The error report has been sent to the administrators."
+msgstr ""
+
+msgid "Enter your username and password"
+msgstr ""
+
+msgid ""
+"You are now accessing a pre-production system. This authentication setup is "
+"for testing and pre-production verification only. If someone sent you a link "
+"that pointed you here, and you are not <i>a tester</i> you probably got the "
+"wrong link, and should <b>not be here</b>."
+msgstr ""
+
+msgid ""
+"A service has requested you to authenticate yourself. Please enter your "
+"username and password in the form below."
+msgstr ""
+
+msgid "Username"
+msgstr ""
+
+msgid "Remember my username"
+msgstr ""
+
+msgid "Password"
+msgstr ""
+
+msgid "Remember me"
+msgstr ""
+
+msgid "Organization"
+msgstr ""
+
+msgid "Remember my organization"
+msgstr ""
+
+msgid "Processing..."
+msgstr ""
+
+msgid "Login"
+msgstr ""
+
+msgid "Help! I don't remember my password."
+msgstr ""
+
+msgid ""
+"Without your username and password you cannot authenticate yourself for "
+"access to the service. There may be someone that can help you. Consult the "
+"help desk at your organization!"
+msgstr ""
+
+msgid "Logging out..."
+msgstr ""
+
+msgid "You are now successfully logged out from %SP%."
+msgstr ""
+
+msgid "You are also logged in on these services:"
+msgstr ""
+
+msgid "logout is not supported"
+msgstr ""
+
+msgid ""
+"Unable to log out of one or more services. To ensure that all your sessions "
+"are closed, you are encouraged to <i>close your webbrowser</i>."
+msgstr ""
+
+msgid "Continue"
+msgstr ""
+
+msgid "Do you want to logout from all the services above?"
+msgstr ""
+
+msgid "Yes, all services"
+msgstr ""
+
+msgid "No, only %SP%"
+msgstr ""
+
+msgid "No"
+msgstr ""
+
+msgid "Check that the link you used to access the web site is correct."
+msgstr ""
+
+msgid "The link used to get here was bad, perhaps a bookmark."
+msgstr ""
+
+msgid "SimpleSAMLphp"
+msgstr ""
+
+msgid ""
+"If you report this error, please also report this tracking number which "
+"makes it possible to locate your session in the logs available to the system "
+"administrator:"
+msgstr ""
