--- a/modules/multiauth/locales/en/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/en/LC_MESSAGES/multiauth.po
@@ -1,4 +1,3 @@
-
 #, fuzzy
 msgid ""
 msgstr ""
@@ -19,9 +18,13 @@ msgid "Select an authentication source"
 msgstr "Select an authentication source"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you and to "
+"create a valid session."
+msgstr ""
+"The selected authentication source will be used to authenticate you and to "
+"create a valid session."
+
+msgid ""
+"The selected authentication source will be used to authenticate you and and "
 "to create a valid session."
 msgstr ""
-"The selected authentication source will be used to authenticate you and "
-"to create a valid session."
-
