--- a/modules/multiauth/locales/af/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/af/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Kies 'n verifikasie bron"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Die gekose verifikasie bron sal gebruik word om jou te identifiseer en 'n geldige sessie te skep."
