--- a/modules/multiauth/locales/cs/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/cs/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Zvolte autentizační zdroj"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Zvolený autentizační zdroj bude použit pro vaše ověření a vytvoření platného sezení."
