--- a/modules/multiauth/locales/da/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/da/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Vælg en authentifiseringskilde"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Den valgte authentifiseringskilde vil blive brugt til at authentifisere dig og give dig en gyldig session."
