--- a/modules/multiauth/locales/el/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/el/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Επιλογή πηγής ταυτοποίησης"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Η επιλεγμένη πηγή ταυτοποίησης θα χρησιμοποιηθεί για την πιστοποίηση της ταυτότητά σας και τη δημιουργία έγκυρης συνεδρίας (session)."
