--- a/modules/multiauth/locales/es/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/es/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Seleccione una fuente para autenticarse"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "La fuente para autenticarse seleccionada será utilizada para autenticarlo y crear una sesión válida"
