--- a/modules/multiauth/locales/eu/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/eu/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Hauta ezazu iturburu bat kautotzeko"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Kautotzeko hautatu duzun iturburua, kautotu eta baliozko saio bat sortzeko erabiliko da."
