--- a/modules/multiauth/locales/fi/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/fi/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Valitse todentamislähde"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Valittua todentamislähdettä käytetään tunnistamiseen ja uuden istunnon luomiseen."
