--- a/modules/multiauth/locales/he/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/he/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "בחר מקור אימות"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "מקור האימות הנבחר ישמש כדי לאמת את זהותך וליצור את סביבת ההתחברות. "
