--- a/modules/multiauth/locales/hr/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/hr/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Odaberite servis preko kojeg se želite autentificirati"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Odabrani autentifikacijski servis bit će iskorišten za vašu autentifikaciju i kreiranje valjane sjednice."
