--- a/modules/multiauth/locales/hu/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/hu/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Válasszon azonosítási metódust"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "A kiválasztott azonosítási metódust kiválasztva azonosítani fogjuk, és kiállítunk erről egy hiteles igazolást."
