--- a/modules/multiauth/locales/it/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/it/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Selezionare una fonte di autenticazione"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "La fonte di autenticazione selezionata verrà usata per autenticarti e creare una sessione valida."
