--- a/modules/multiauth/locales/lt/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/lt/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Pasirinkite autentiškumo patvirtinimo šaltinį"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Pasirinktas autentiškumo patvirtinimo šaltinis bus naudojamas nustatyti Jūsų autentiškumą ir sukurti galiojančią sesiją."
