--- a/modules/multiauth/locales/lv/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/lv/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Izvēlieties autentifikācijas avotu"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Izvēlētais autentifikācijas avots tiks izmantots Jūsu autentificēšanai un derīgas sesijas izveidošanai."
