--- a/modules/multiauth/locales/nn/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/nn/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Vel ei innloggingskjelde"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Innloggingskjelda du har vald blir brukt til å logga inn og laga ein gyldig sesjon."
