--- a/modules/multiauth/locales/pl/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/pl/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Wybierz źródło autentykacji"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Wybrane źródło zostanie użyte do autentykacji i stworzenia sesji"
