--- a/modules/multiauth/locales/ro/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/ro/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Vă rugăm să alegeți o sursă pentru autentificare"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Sursa de autentificare selectată va fi folosită pentru a vă autentifica și pentru a crea o sesiune validă."
