--- a/modules/multiauth/locales/sl/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/sl/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Izberite avtentikacijski vir"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Izbrani avtentikacijski vir bo uporabljen pri vaši prijavi"
