--- a/modules/multiauth/locales/sv/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/sv/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "Välj inloggningskälla"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "Den valda inloggningskällan kommer att användas för din inloggning och för att skapa giltig inloggningssession."
