--- a/modules/multiauth/locales/zh/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/zh/LC_MESSAGES/multiauth.po
@@ -5,5 +5,5 @@ msgstr ""
 msgid "Select an authentication source"
 msgstr "选择一个认证源"
 
-msgid "The selected authentication source will be used to authenticate you and and to create a valid session."
+msgid "The selected authentication source will be used to authenticate you and to create a valid session."
 msgstr "选定的认证源将会用于认证你的身份和给你一个有效的会话"
