--- a/modules/multiauth/locales/de/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/de/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Wählen Sie eine Authentifizierungsquelle"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Die gewählte Authentifizierungsquelle wird verwenden werden, um Sie zu "
