--- a/modules/multiauth/locales/ar/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/ar/LC_MESSAGES/multiauth.po
@@ -20,7 +20,7 @@ msgid "Select an authentication source"
 msgstr "اختار مصدر توثيق"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr "مصدرتوثيقك المختار سيستخدم لتصديق دخولك "
 
