--- a/modules/multiauth/locales/es/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/es/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Seleccione una fuente para autenticarse"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "La fuente para autenticarse seleccionada será utilizada para autenticarlo"
