--- a/modules/multiauth/locales/et/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/et/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Vali autentimisallikas"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Valitud autentimisallikat kasutatakse sinu autentimiseks ja "
