--- a/modules/multiauth/locales/fi/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/fi/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Valitse todentamislähde"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Valittua todentamislähdettä käytetään tunnistamiseen ja uuden istunnon "
