--- a/modules/multiauth/locales/fr/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/fr/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Sélectionnez une source d'authentification"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "La source d'authentification sélectionnée sera utilisée pour vous "
