--- a/modules/multiauth/locales/hr/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/hr/LC_MESSAGES/multiauth.po
@@ -20,7 +20,7 @@ msgid "Select an authentication source"
 msgstr "Odaberite servis preko kojeg se želite autentificirati"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Odabrani autentifikacijski servis bit će iskorišten za vašu "
