--- a/modules/multiauth/locales/id/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/id/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Pilih sumber autentifikasi"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Sumber autentifikasi terpilih akan digunakan untuk mengautentifikasi Anda"
