--- a/modules/multiauth/locales/ja/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/ja/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "認証元を選択してください。"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr "選択された認証元は認証に使用され、正当なセッションを生成します。"
 
