--- a/modules/multiauth/locales/lt/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/lt/LC_MESSAGES/multiauth.po
@@ -20,7 +20,7 @@ msgid "Select an authentication source"
 msgstr "Pasirinkite autentiškumo patvirtinimo šaltinį"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Pasirinktas autentiškumo patvirtinimo šaltinis bus naudojamas nustatyti "
