--- a/modules/multiauth/locales/nb/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/nb/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Velg en autentiseringskilde"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Den valgte autentiseringskilden vil bli brukt til å autentisere brukeren "
