--- a/modules/multiauth/locales/nl/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/nl/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Selecteer een authenticatiebron"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "De geselecteerde authenticatiebron zal gebruikt worden om u te "
