--- a/modules/multiauth/locales/ro/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/ro/LC_MESSAGES/multiauth.po
@@ -20,7 +20,7 @@ msgid "Select an authentication source"
 msgstr "Vă rugăm să alegeți o sursă pentru autentificare"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Sursa de autentificare selectată va fi folosită pentru a vă autentifica "
