--- a/modules/multiauth/locales/ru/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/ru/LC_MESSAGES/multiauth.po
@@ -20,7 +20,7 @@ msgid "Select an authentication source"
 msgstr "Выберите источник аутентификации"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Выбранный источник аутентификации будет использоваться для вашей "
