--- a/modules/multiauth/locales/sv/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/sv/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "Välj inloggningskälla"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr ""
 "Den valda inloggningskällan kommer att användas för din inloggning och "
