--- a/modules/multiauth/locales/zh-tw/LC_MESSAGES/multiauth.po
+++ b/modules/multiauth/locales/zh-tw/LC_MESSAGES/multiauth.po
@@ -19,7 +19,7 @@ msgid "Select an authentication source"
 msgstr "選擇一個認證來源"
 
 msgid ""
-"The selected authentication source will be used to authenticate you and "
+"The selected authentication source will be used to authenticate you "
 "and to create a valid session."
 msgstr "系統將會使用您選擇之認證來源進行驗證並建立一個有效連線。"
 
