Fix special character

--- a/locales/es/LC_MESSAGES/messages.po
+++ b/locales/es/LC_MESSAGES/messages.po
@@ -688,7 +688,7 @@ msgid "No SAML message provided"
 msgstr "Falta el mensaje SAML"
 
 msgid "Help! I don't remember my password."
-msgstr "&iexcl;Socorro! Se me ha olvidado mi clave de acceso."
+msgstr "¡Socorro! Se me ha olvidado mi clave de acceso."
 
 msgid ""
 "You can turn off debug mode in the global SimpleSAMLphp configuration "
@@ -813,7 +813,7 @@ msgid ""
 "yourself for access to the service. There may be someone that can help "
 "you. Consult the help desk at your organization!"
 msgstr ""
-"&iexcl;Muy mal! - Sin su nombre de usuario y su clave de acceso usted no "
+"¡Muy mal! - Sin su nombre de usuario y su clave de acceso usted no "
 "se puede identificar y acceder al servicio. A lo mejor hay alguien que "
 "puede ayudarle. &iexcl;P&oacute;ngase en contacto con el centro de ayuda "
 "de su universidad!"
